--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -1,17 +1,19 @@
-
 {% block sign_in%}
 <div class="form-container sign-in-container">
     <form action="/login" method="POST">
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
         <h1>Sign in</h1>
         <!-- <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
         </div> -->
-        <input type="email" placeholder="Email" id="email" name="email" required/>
-        <input type="password" placeholder="Password" id="password" name="password"/>
+        <input type="email" placeholder="Email" id="email" name="email" required />
+        <input type="password" placeholder="Password" id="password" name="password" />
         <a href="#">Forgot your password?</a>
         <button>Sign In</button>
     </form>
-</div>  
+</div>
 {% endblock sign_in%}
