--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
-    {% block dashboard %}
-        <p>dashh</p>
-    {% endblock dashboard %}
+    {% block body %}
+        {% include 'navbar.html' %}
+        <p1>dashh</p1>
+    {% endblock body %}
