--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<h1>PLANIFY</h1>
 <div class="container" id="container">
     {% include 'sign_in.html' %}
     {% include 'sign_up.html' %}
