--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,7 +3,7 @@
 {% block body %}
     
     <!-- Link to registration.css (direct method) -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/registration.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='users/registration.css') }}">
 
     <div class="registration-container">
         <h1>Register for {{ event_name }}</h1>
