--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <!-- {% include 'navbar.html' %} -->
+    {% include 'users/navbar.html' %}
 
     <div class="event-container">
         <h1>Explore Events</h1>
