--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -3,18 +3,18 @@
 {% block body %}
     {% include 'users/navbar.html' %}
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='users/events.css') }}">
+
     <div class="event-container">
         <h1>Explore Events</h1>
         <div class="event-cards">
             {% for event in events %}
             <div class="event-card">
-                <!-- Placeholder for image (for now, empty or use a simple background) -->
                 <div class="event-image-placeholder"></div>
                 <div class="event-details">
                     <h3>{{ event['name'] }}</h3>
                     <p>{{ event['desc'] }}</p>
-                    <!-- Link to registration page for each event -->
-                    <a href="{{ url_for('event_details', event_id=event['id']) }}" class="register-button">Register</a>
+                    <a href="/event/{{ event['id'] }}" class="register-button">View Details</a>
                 </div>
             </div>
             {% endfor %}
