--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -14,7 +14,8 @@
                 <div class="event-details">
                     <h3>{{ event['name'] }}</h3>
                     <p>{{ event['desc'] }}</p>
-                    <a href="/event/{{ event['id'] }}" class="register-button">View Details</a>
+                    <a href="{{ url_for('events_file.event_details', event_id=event.id) }}">View Details</a>
+
                 </div>
             </div>
             {% endfor %}
