--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -1,10 +1,10 @@
 <div class="nav-container">
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="dashboard">Planify</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('dashboard') }}">Planify</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('explore_events') }}">Events</a>
+            <a class="nav-link" href="{{ url_for('events_file.explore_events') }}">Events</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
