Addition of admin side

--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="/">logout</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Admin</a>
+            <a class="nav-link" href="{{ url_for('admin.admin_login') }}">Admin</a>
         </li>
     </ul>
 </div>
