--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='users/events.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin/admin.css') }}">
     {% block extra_css %}{% endblock extra_css %}
 </head>
 
