image addittion and modification

--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -3,9 +3,9 @@
     <div class="sidebar">
         <h2>Admin Dashboard</h2>
         <a href="{{ url_for('admin.admin_dashboard') }}">Dashboard</a>
-        <a href="/">Manage Users</a>
         <a href="{{url_for('admin.manage_events')}}">Manage Events</a>
-        <a href="/">Create Event</a>
+        <a href="{{url_for('admin.create_events')}}">Create Events</a>
+        <a href="/">Manage Users</a>
         <a href="/">Logout</a>
     </div>
 
