--- a/templates/admin/manage_events.html
+++ b/templates/admin/manage_events.html
@@ -2,34 +2,38 @@
 {% extends "admin/admin_dashboard.html" %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2>Create Event</h2>
-    <form method="POST">
-        <!-- Event Title -->
-        <div class="mb-3">
-            <label for="title" class="form-label">Event Title</label>
-            <input type="text" class="form-control" id="title" name="title" required>
-        </div>
+<link rel="stylesheet" href="{{ url_for('static', filename='admin/manage_events.css') }}">
+<div class="container manage_events mt-5">
+    <h1 class="mb-4">Manage Events</h1>
 
-        <!-- Event Description -->
-        <div class="mb-3">
-            <label for="short_desc" class="form-label">Event Description</label>
-            <textarea class="form-control" id="short_desc" name="short_desc" rows="4" required></textarea>
-        </div>
+    <table class="table table-bordered events-table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Short Description</th>
+                <th>Description</th>
+                <th>Date and Time</th>
+            </tr>
 
-        <!-- Event Date -->
-        <div class="mb-3">
-            <label for="date" class="form-label">Event Date</label>
-            <input type="datetime-local" class="form-control" id="date" name="date" required>
-        </div>
+        </thead>
+        <tbody>
+            {% for event in events %}
+            <tr>
+                <td>{{ event.id }}</td>
+                <!-- <td>{{ image }} </td> <img src="{{ url_for('static', filename='uploads/' + event.photo) }}" alt="Event Photo" /> -->
+                <td>{{ event.title }}</td>
+                <td>{{ event.short_desc }}</td>
+                <td>{{ event.description }}</td>
+                <td class="date-column">{{ event.date.strftime('%Y-%m-%d %H:%M') }}</td>
 
-        <!-- Event Full Description -->
-        <div class="mb-3">
-            <label for="description" class="form-label">Event Full Description</label>
-            <textarea class="form-control" id="description" name="description" rows="6"></textarea>
-        </div>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-        <button type="submit" class="btn btn-primary">Create Event</button>
-    </form>
+    {% if not events %}
+    <p class="no-events">No events available.</p>
+    {% endif %}
 </div>
 {% endblock content%}
