--- a/templates/users/event_details.html
+++ b/templates/users/event_details.html
@@ -3,14 +3,35 @@
 {% block body %}
     {% include 'users/navbar.html' %}
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='users/event_details.css') }}">
+
     <div class="event-detail-container">
-        <h1>{{ event['name'] }}</h1>
+        <!-- Event Title -->
+        <h1>{{ event.title }}</h1>
+
         <div class="event-detail-content">
-            <div class="event-image-placeholder"></div>
-            <p>{{ event['desc'] }}</p>
-            <h3>Date: {{ event['date'] }}</h3>
-            <h3>Location: {{ event['location'] }}</h3>
+            <!-- Event Image -->
+            <div class="event-image-placeholder">
+                {% if event.photo %}
+                    <img src="{{ url_for('static', filename='uploads/' + event.photo) }}" alt="Event Photo">
+                {% else %}
+                    <img src="{{ url_for('static', filename='uploads/default.jpg') }}" alt="Default Event Photo">
+                {% endif %}
+            </div>
+
+            <!-- Event Description -->
+            <p>{{ event.description }}</p>
+
+            <!-- Event Date -->
+            <h3>Date: {{ event.date.strftime('%Y-%m-%d %H:%M:%S') }}</h3>
+
+            <!-- Event Location (if applicable) -->
+            {% if event.location %}
+                <h3>Location: {{ event.location }}</h3>
+            {% endif %}
         </div>
-        <a href="{{ url_for('register', event_id=event['id']) }}" class="register-button">Register</a>
-    </div>
+
+        <!-- Register Button -->
+        <a href="{{ url_for('register', event_id=event.id) }}" class="register-button">Register</a>
+    </div>  
 {% endblock body %}
