--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -10,12 +10,27 @@
         <div class="event-cards">
             {% for event in events %}
             <div class="event-card">
-                <div class="event-image-placeholder"></div>
-                <div class="event-details">
-                    <h3>{{ event['name'] }}</h3>
-                    <p>{{ event['desc'] }}</p>
-                    <a href="{{ url_for('events_file.event_details', event_id=event.id) }}">View Details</a>
+                <!-- Event Image -->
+                <div class="event-image-placeholder">
+                    {% if event.photo %}
+                        <img src="{{ url_for('static', filename='uploads/' + event.photo) }}" alt="Event Photo">
+                    {% else %}
+                        <img src="{{ url_for('static', filename='uploads/default.jpg') }}" alt="Default Event Photo">
+                    {% endif %}
+                </div>
 
+                <div class="event-details">
+                    <!-- Event Title -->
+                    <h3>{{ event.title }}</h3>
+
+                    <!-- Event Short Description -->
+                    <p>{{ event.short_desc }}</p>
+
+                    <!-- Event Date (formatted) -->
+                    <p class="date">{{ event.date.strftime('%Y-%m-%d %H:%M:%S') }}</p>
+
+                    <!-- Link to Event Details Page -->
+                    <a href="{{ url_for('events_file.event_details', event_id=event.id) }}">View Details</a>
                 </div>
             </div>
             {% endfor %}
