--- a/templates/users/event_details.html
+++ b/templates/users/event_details.html
@@ -31,7 +31,7 @@
             {% endif %}
         </div>
 
-        <!-- Register Button -->
-        <a href="{{ url_for('register', event_id=event.id) }}" class="register-button">Register</a>
+        <a href="{{ url_for('events_file.register_event_user', event_id=event.id) }}" class="register-button">Register</a>
+        
     </div>  
 {% endblock body %}
