new feature addittion for admin

--- a/templates/admin/view_registration.html
+++ b/templates/admin/view_registration.html
@@ -1,35 +1,38 @@
-{% extends base.html %}
+{% extends "admin/admin_dashboard.html" %}
 
-{%block body%}
-<div class="container mt-5">
-    <h1 class="mb-4">Registrations</h1>
-    <table class="table table-bordered table-striped">
-        <thead class="table-dark">
+{% block content %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin/registrations.css') }}">
+    <h1>Event Registrations</h1>
+    <table>
+        <thead>
             <tr>
-                <th>#</th>
                 <th>User Name</th>
                 <th>Email</th>
                 <th>Event Title</th>
-                <th>Event Date</th>
                 <th>Registration Date</th>
-                <th>Status</th>
                 <th>Remarks</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            {% for reg in registrations %}
+            {% for reg, user_name, user_email, event_title in registrations %}
             <tr>
-                <td>{{ loop.index }}</td>
-                <td>{{ reg.user.name }}</td>
-                <td>{{ reg.user.email }}</td>
-                <td>{{ reg.event.title }}</td>
-                <td>{{ reg.event.date.strftime('%Y-%m-%d') }}</td>
+                <td>{{ user_name }}</td>
+                <td>{{ user_email }}</td>
+                <td>{{ event_title }}</td>
                 <td>{{ reg.registration_date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-                <td>{{ reg.status }}</td>
                 <td>{{ reg.remarks or 'N/A' }}</td>
+                <td>
+                    <!-- Edit Button -->
+                    <a href="{{ url_for('admin.edit_registration', registration_id=reg.id) }}" class="btn btn-warning btn-sm">Edit</a>
+                    
+                    <!-- Delete Button -->
+                    <form action="{{ url_for('admin.delete_registration', registration_id=reg.id) }}" method="POST" style="display:inline;">
+                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-</div>
-{%endblock body%}
+{% endblock %}
