--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -5,7 +5,7 @@
         <a href="{{ url_for('admin.admin_dashboard') }}">Dashboard</a>
         <a href="{{url_for('admin.manage_events')}}">Manage Events</a>
         <a href="{{url_for('admin.create_events')}}">Create Events</a>
-        <a href="/">Manage Users</a>
+        <a href="{{url_for('events_file.view_registrations')}}">Manage Users</a>
         <a href="/">Logout</a>
     </div>
 
