--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -1,5 +1,12 @@
-<div class="nav-container">
-    <ul class="nav justify-content-center">
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    </head>
+    <div class="top-left">
+      PLANIFY
+    </div>
+    <div class="nav-container">
+      </div><div class="nav-container">
+    <ul class="nav">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('dashboard') }}">Planify</a>
         </li>
@@ -10,13 +17,7 @@
             <a class="nav-link" href="#">About Us</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Feedback</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/">logout</a>
+            <a class="nav-link" href="/">Logout</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin.admin_login') }}">Admin</a>
