--- a/templates/users/navbar.html
+++ b/templates/users/navbar.html
@@ -1,11 +1,11 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    </head>
-    <div class="top-left">
-      PLANIFY
-    </div>
-    <div class="nav-container">
-      </div><div class="nav-container">
+</head>
+<div class="nav-container">
+    <!-- Adjusted logo size and position -->
+    <img class="logo" src="{{ url_for('static', filename='uploads/Planify.png') }}" alt="Planify Logo">
+    
+    <!-- Navigation menu -->
     <ul class="nav">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('dashboard') }}">Planify</a>
@@ -24,3 +24,4 @@
         </li>
     </ul>
 </div>
+
