--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -16,16 +16,19 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" style="width: 60%;">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="logo" src="{{ url_for('static', filename='uploads/a.png') }}" alt="Planify Logo">
-                    class="d-block w-100" alt="...">
+                <img src="{{ url_for('static', filename='uploads/E1.avif') }}" 
+                     class="d-block w-100 carousel-image" 
+                     alt="Planify Event 1" loading="lazy">
             </div>
             <div class="carousel-item">
-                <img class="logo" src="{{ url_for('static', filename='uploads/b.png') }}" alt="Planify Logo">
-                    class="d-block w-100" alt="...">
+                <img src="{{ url_for('static', filename='uploads/E2.avif') }}" 
+                     class="d-block w-100 carousel-image" 
+                     alt="Planify Event 2" loading="lazy">
             </div>
             <div class="carousel-item">
-                <img src="https://img.pikbest.com/origin/10/07/14/41upIkbEsTGez.jpg!w700wp"
-                    class="d-block w-100" alt="...">
+                <img src= "{{ url_for('static', filename='uploads/E3.avif') }}"
+                     class="d-block w-100 carousel-image" 
+                     alt="Planify Event 3" loading="lazy">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
